@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.5-6.9
-Date: 2011-12-07
+Version: 0.5-6.10
+Date: 2011-12-12
 Authors@R: person("Ingo", "Feinerer", role = c("aut", "cre"),
 	          email = "feinerer@logic.at")
 Author: Ingo Feinerer
